<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Owner</string>
    <string name="action_settings">Settings</string>

	<array name ="job_sel">
		<item>管理者</item>
		<item>被管理者</item>

	</array>

    <string name="details_alarm_name">名稱</string>
	<string name="details_repeat_weekly">每週重複</string>
	<string name="details_sunday">星期日</string>
	<string name="details_monday">星期一</string>
	<string name="details_tuesday">星期二</string>
	<string name="details_wednesday">星期三</string>
	<string name="details_thursday">星期四</string>
	<string name="details_friday">星期五</string>
	<string name="details_saturday">星期六</string>
	<string name="details_alarm_tone">鬧鐘音效</string>
	<string name="details_alarm_tone_default">請選擇一個鬧鐘音效</string>
    <string name="title_activity_all_apps">AllAppsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_application_adapter">ApplicationAdapter</string>
	<string name="app_names">List All Apps</string>
	<string name="about_title">Javatechig.com</string>
	<string name="about_desc">Provides tutorials, tips, examples and source code on leading Java, Android, Blackberry, PhoneGap and other mobile technologies.</string>
	<string name="action_about">About</string>
	<string name="hello_worlds">Hello world!</string>
	<string name="title_activity_main2">Main2Activity</string>
	<string name="action_setting">Settings</string>

	<string name="title_activity_single_contact">SingleContactActivity</string>
	<string name="login">Login</string>
	<string name="title_activity_login">Login</string>
	<string name="title_activity_register">Register</string>
    <string name="title_activity_first_page">first_page</string>
    <string name="title_activity_setting__introduction">Setting_Introduction</string>
    <string name="title_activity_start">start</string>

	<string name="sunday">日</string>
	<string name="monday">一</string>
	<string name="tuesday">二</string>
	<string name="wednesday">三</string>
	<string name="thursday">四</string>
	<string name="friday">五</string>
	<string name="saturday">六</string>

	<string name="Change_Password">更改密碼</string>
	<string name="Remind">視窗提醒</string>
	<string name="Introduction">Time Owner介紹</string>
	<string name="About_us">關於我們</string>

	<string name="Change_PasswordD">可以在這裡更改預設密碼(0000)</string>
	<string name="RemindD">勾選是否要在限制時段來臨前跳出視窗提醒</string>
	<string name="IntroductionD">介紹Time Owner運作方式</string>
	<string name="About_usD">關於我們</string>
	<string name="Sync">同步</string>

	
</resources>
